Revert "prevent project/locale selector text overflow"
This reverts commit 6669603dafc272dc761266724ab7114233e484ec.

--- a/pontoon/teams/static/css/team_selector.css
+++ b/pontoon/teams/static/css/team_selector.css
@@ -20,20 +20,6 @@
   border-radius: 2px 2px 0 0;
 }
 
-.locale-selector .locale.select .button .language,
-.locale-selector .locale.select .button .selected-project {
-  display: inline-block;
-  max-width: 180px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  vertical-align: bottom;
-}
-
-.locale-selector .locale.select .button .selected-project {
-  max-width: 220px;
-}
-
 .locale-selector .locale.select .button .code {
   text-transform: none;
 }
@@ -59,16 +45,6 @@
 
 .locale-selector .locale.select .code {
   float: right;
-}
-
-.locale-selector .locale.select .menu ul li span.language,
-.locale-selector .locale.select .menu ul li span.selected-project {
-  display: inline-block;
-  max-width: 180px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  vertical-align: middle;
 }
 
 .locale-selector .locale.select .menu ul li span.code {
